--- a/ckanext/publicamundi/templates/package/snippets/resource_item.html
+++ b/ckanext/publicamundi/templates/package/snippets/resource_item.html
@@ -71,7 +71,11 @@
         {% else %}
         <i>{{ _('No description') }}</i>
         {% endif %}
-    </p>
+        </p>
+
+    {% block resource_languages %}
+    {% endblock %}
+
     {% endblock %} {# resource_item_description #}
 
 
