minor style change

--- a/ckanext/publicamundi/themes/geodata/public/css/main.css
+++ b/ckanext/publicamundi/themes/geodata/public/css/main.css
@@ -881,7 +881,7 @@ p a{
     margin-bottom: 0 !important;
 }
 #package-list-home{
-    background: #ECECEC;
+    background: #F3F4F4;
     padding-bottom: 20px;
     padding-top: 20px;
 }
