--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/resources_simplified.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/resources_simplified.html
@@ -4,14 +4,12 @@
     <h2 class="module-heading"><i class="icon-copy"></i> {{ _("Resources") }}</h2>
     <ul class="unstyled nav nav-simple">
     {% for resource in resources %}
-    {% if (resource.vectorstorer_resource or resource.rasterstorer_resource) %}
+        {% if not resource.format == 'data_table' %}
         {% set res_display_name = pkg.title|truncate(25)+' ('+resource.format|upper+')' %}
-        {%  else %}
-        {% set res_display_name = h.resource_display_name(resource) %}
-        {% endif %}
         <li class="nav-item{{ ' active' if active == resource.id }}">
           {% link_for res_display_name|truncate(34), controller='package', action=action or 'resource_read', id=pkg.name, resource_id=resource.id, inner_span=true %}
-        </li>
+          </li>
+        {% endif %}
       {% endfor %}
     </ul>
   </section>
