fixed template Leave feedback link and removed unecessary functions from plugins.py

--- a/ckanext/publicamundi/themes/geodata/templates/page.html
+++ b/ckanext/publicamundi/themes/geodata/templates/page.html
@@ -15,7 +15,7 @@
 
     {% block feedback %}
         <div class="feedback-form">
-            <a href="{{ h.feedback_form() }}"><button class="btn btn-primary">{{_('Leave your feedback')}}</button></a><a href="#"><div class="imis-logo-side"></div></a>
+            <a href="{{ h.feedback_form() }}"><button class="btn btn-primary">{{_('Leave your feedback')}}</button><div class="imis-logo-side"></div></a>
                             </div>
     {% endblock %}
 
