--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/mapping_api.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/mapping_api.html
@@ -7,6 +7,7 @@
     {% endif %}
 {% endfor %}
 
+
 <div class="accordion-group">
     <div class="accordion-heading">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-dev" href="#collapse-js">{{ _('Mapping API') }} &raquo;</a>
@@ -15,14 +16,13 @@
         <div class="accordion-inner">
             {% if res %}
             {% snippet 'package/snippets/developers/mapping_api_js.html', res=res %}
-
             {% else %}
             <strong>{{ _('The dataset contains no suitable data to use with the Mapping API')}}</strong><br><br>
             {% endif %}
-            <strong>{%trans%}You can find detailed Mapping API demos <a href="/mapping-api" target="_blank">here</a>{%endtrans%}
+            {% set mapping_api_link = h.redirect_wp('applications/mapping-api') %}
+            <strong>{%trans%}You can find detailed Mapping API demos <a href="{{mapping_api_link }}" target="_blank">here</a>{%endtrans%}
+ 
             </strong>
-
-        </div>
     </div>
 </div>
 
