Update encoding names to be iconv-compatible (vectorstorer).
The GDAL library is quite strict on what it expects as an encoding name (SHAPE_ENCODING option)

--- a/ckanext/publicamundi/storers/vector/templates/user/snippets/ingest_templates/vector/multilayer_format.html
+++ b/ckanext/publicamundi/storers/vector/templates/user/snippets/ingest_templates/vector/multilayer_format.html
@@ -34,7 +34,7 @@
                     
                     <div class="controls" data-module="encoding-autocomplete" data-module-search_encoding_url={{search_encoding_url}} 
                         data-module-layer_idx="{{layer.idx}}">
-                       <input id="layer_encoding_{{layer.idx}}" layer_id={{layer.idx}} type="text" name="encoding" value="utf_8">
+                       <input id="layer_encoding_{{layer.idx}}" layer_id={{layer.idx}} type="text" name="encoding" value="utf-8">
                     </div>
                 </div>
                 <div class="" style="float:right;">
