--- a/ckanext/publicamundi/themes/geodata/templates/user/dashboard.html
+++ b/ckanext/publicamundi/themes/geodata/templates/user/dashboard.html
@@ -25,7 +25,7 @@
     {{ h.build_nav_icon('user_dashboard', _('News feed')) }}
     
     {% if c.is_sysadmin %} 
-        {{ h.build_nav_icon('user_dashboard_maps', _('Configure Maps'), icon='globe') }}
+        {{ h.build_nav_icon('user_dashboard_maps', _('Maps'), icon='globe') }}
     {% endif %}
 {% endblock %}
 
