--- a/ckanext/publicamundi/themes/geodata/templates/snippets/maps_admin_list.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/maps_admin_list.html
@@ -1,7 +1,17 @@
 {% if resources %}
-  <ul class="dataset-list unstyled">
+<div id="map-layers">
+    <form id="map-admin-layers-inactive">
+      <ul class="map-dataset-content-ul">
+          <li><h4> {{_('Package')}}</h4></li>
+          <li> <h4>{{_('Resource')}}</h4></li>
+      <li><h4> {{_('Organization')}}</h4></li>
+  <li><h4> {{_('Ignore')}}</h4></li>
+    </ul>
+    <ul class="dataset-list unstyled">
     {% for resource in resources %}
       {% snippet 'snippets/maps_admin_item.html', resource=resource %}
-    {% endfor %}
+      {% endfor %}
   </ul>
+  </form>
+  </div>
 {% endif %}
