--- a/ckanext/publicamundi/themes/geodata/templates/user/dashboard_maps.html
+++ b/ckanext/publicamundi/themes/geodata/templates/user/dashboard_maps.html
@@ -79,7 +79,7 @@
         <h3>{{_('Selected layer/node options')}}</h3>
         <hr>
         <div id="map-loader-secondary" class="ajax-loader" style="display:none; float:right"></div>
-
+    <div class="map-options-bar-content">
     <div class="map-options-metadata">
         <h4>{{_('Metadata')}}</h4> 
         <div id="map-options-package">
@@ -103,7 +103,7 @@
            </form> 
         </div>
             <div id="map-options-template">
-                <label>{{_('Template')}}</label><textarea id="map-options-template-input" type="text" name="fields-template" ></textarea>
+                <label>{{_('Template')}}</label><textarea rows="2" cols="100" id="map-options-template-input" type="text" name="fields-template" ></textarea>
             </div>
             
             <div class="map-options-fields" hidden>
@@ -129,7 +129,7 @@
         <input class="hidden pull-right" type="submit" value="{{ _('OK')}}"></input>
     </form>
         </div>
-
+    </div>
     </div>
 </div>
 
