implemented reading tree from db

--- a/ckanext/publicamundi/themes/geodata/templates/user/dashboard_maps.html
+++ b/ckanext/publicamundi/themes/geodata/templates/user/dashboard_maps.html
@@ -75,11 +75,11 @@
     </div>
 
 
-    <div id="map-options-bar" class="map-options-bar" hidden>
+    <div id="map-options-bar" class="map-options-bar">
         <h3>{{_('Selected layer/node options')}}</h3>
         <hr>
         <div id="map-loader-secondary" class="ajax-loader" style="display:none; float:right"></div>
-    <div class="map-options-bar-content">
+    <div class="map-options-bar-content" hidden>
     <div class="map-options-metadata">
         <h4>{{_('Metadata')}}</h4> 
         <div id="map-options-package">
