removed debugging output

--- a/ckanext/publicamundi/themes/geodata/templates/user/dashboard_maps.html
+++ b/ckanext/publicamundi/themes/geodata/templates/user/dashboard_maps.html
@@ -26,7 +26,7 @@
                 </a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
                     <li>
-                    <a id="map-filter-layers-all" href="#"> {% trans %}<span class="all-resources"></span>All{% endtrans %}</a>
+                    <a id="map-filter-layers-all" href="#"> {% trans %}<span class="all-resources"></span>All available{% endtrans %}</a>
                     </li>
                     
                     <li>
@@ -41,7 +41,7 @@
             </div>
             
             <div id="map-filter-layers-status" class="filter-list">
-                <span class="filtered pill label" id="map-filter-layers-status-all"> {% trans %}<span class="all-resources"></span>All{% endtrans %}</span>
+                <span class="filtered pill label" id="map-filter-layers-status-all"> {% trans %}<span class="all-resources"></span>All available{% endtrans %}</span>
                 <span hidden class="filtered pill label" id="map-filter-layers-status-new"> {% trans %}<span class="new-resources"></span>New{% endtrans %}</span>
                 <span hidden class="filtered pill label" id="map-filter-layers-status-ignored"> {% trans %}<span class="ignored-resources"></span>Ignored{% endtrans %}</span>
                 </div>
