fixed slider broken link

--- a/ckanext/publicamundi/themes/geodata/templates/home/snippets/carousel.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/snippets/carousel.html
@@ -5,7 +5,7 @@
              {'name':'oikodomika-tetragona-tou-demou-kalamarias',
              'display_name': _('City blocks Kalamaria')
              },
-             {'name':'urban-rural-regions',
+             {'name':'oikismoi',
              'display_name': _('Urban & rural regions')
              },
              {'name':'siderodromiko-diktuo-elladas',
